<resources>
    <string name="app_name">MedConnect</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_message">Complete your profile</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>

    <!-- Profile info -->
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="submit_btn">Submit</string>
    <string name="add_profile_btn">Add Profile</string>
    <string name="empty_data">Please, fill in your Name and Profession</string>

</resources>
